[build-system]
requires = ["setuptools", "setuptools-git-versioning"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# packages = ["tcfptransformers"]
include-package-data = false

[tool.setuptools.packages.find]
include = ["tcfptransformers*"]
exclude = ["images", "images*"] 

[tool.setuptools.exclude-package-data]
# This applies to package_data — any included packages' data files you want to drop
"*" = ["images/*"]

[tool.setuptools-git-versioning]
enabled = true

[project]
name = "tcfptransformers"
dynamic = ["version"]
dependencies = ["scipy>=1.5.2",
"numpy>=1.19.2",
"scikit-learn>=1.2.1"]
requires-python = ">=3.8"
authors = [
  {name = "Lee Sikstrom", email = "ldsikstrom@gmail.com"},
]
description = "A custom package of Scikit-Learn transformers for the TCFP protocol."
readme = "README.md"
